<resources>
    <string name="app_name">TMDbISEL</string>
    <string name="movies_title">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_misc">Misc</string>
    <string name="am_msg_tap_twice">Tap twice to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_message">The cache was successfully cleared.</string>
    <string name="clear_db">Clear Database</string>
    <string name="settings_saved_message">Settings were successfully saved.</string>
    <string name="search">Search</string>
    <string name="action_about">About</string>
    <string name="no_conectivity_wrn">No internet connection!</string>
    <string name="not_wifi_wrn">No wifi! Mind expenses!</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_search">Search</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="about_description">Assignment work of PDM course unit at ISEL LEIC -
        2015\n\nImplemented by group 4:\n24358 Raul Costa\n25993 Carlos Marques\n37325 Rui
        Corveira\n\nMakes use of TMDB API:
    </string>
    <string name="about_api_link" translatable="false">http://docs.themoviedb.apiary.io/</string>
    <string name="vote_average">Vote Average</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="slider_diskcache_title">Disk Cache</string>
    <string name="slider_memorycache_title">Memory Cache</string>
    <string name="slider_message">The higher the value the smoother the experience will be.</string>
    <string name="slider_summary">Current value is $1 KiB</string>
    <string name="wifionly_summary">Update only when connected to Wi-Fi networks</string>
    <string name="slider_unit" translatable="false">KiB</string>
    <string name="slider_enableupdatestitle">Enable Updates</string>
    <string name="wifionly_title">Wi-Fi Only</string>
    <string name="loading">Please wait…</string>
    <string name="movie_poster" translatable="false">Movie Poster</string>
    <string name="sinopse_title" translatable="false">
        <u>Sinopse</u>
    </string>

    <string name="pref_notify_key" translatable="false">pref_notify_key</string>
    <string name="pref_notify_title">Enable notifications</string>
    <string name="pref_notify_summary">Allow alerts for favourite film premiers</string>
    <string name="pref_syncCategory_title">Synchronization (with data connectivity)</string>
    <string name="pref_syncFreq_key" translatable="false">pref_syncFreq_key</string>
    <string name="pref_syncFreq_title">Frequency</string>
    <string name="pref_syncFreq_summary">Each 9999 hour(s)</string>
    <string name="pref_wifiSync_key" translatable="false">pref_wifiSync_key</string>
    <string name="pref_wifiSync_title">Wi-Fi Only</string>
    <string name="pref_wifiSync_summary">Block mobile data use</string>
    <string name="pref_cacheCategory_title">Cache (reservation)</string>
    <string name="pref_imgMem_key" translatable="false">pref_imgMem_key</string>
    <string name="pref_imgMem_title">Memory for images</string>
    <string name="pref_imgMem_summary">Current value is 9999 KB</string>
    <string name="pref_imgMem_dialog_msg">Allowed maximum</string>
    <string name="pref_dataMem_key" translatable="false">pref_dataMem_key</string>
    <string name="pref_dataMem_title">Memory for data</string>
    <string name="pref_dataMem_summary">Current value is 9999 KB</string>
    <string name="pref_dataMem_dialog_msg">Allowed maximum</string>
    <string name="pref_unit_size">KB</string>
    <string name="clear_settings">Reset Settings</string>
    <string name="AppTitle">TMDb ISEL</string>
    <string name="movie_detail_overview">Description</string>
    <string name="movie_detail_title">Title</string>
    <string name="reviews_label"><u>Reviews</u></string>
    <string name="author_label">Author: </string>
    <string name="content_label">Review: </string>
    <string name="movie_poster_label" translatable="false">Movie Poster</string>
    <string name="original_language_label">Original Language:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="popularity_label">Popularity:</string>
    <string name="vote_average_label">Vote Average:</string>
    <string name="homepage_label">Homepage:</string>
    <string name="production_companies_label">Production Companies:</string>
    <string name="logo_tmdbisel_image_label" translatable="false">Logo TMDbISEL</string>


</resources>
