<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/search"
          android:visible="false"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom|collapseActionView"/>
    <item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clear_settings"
          android:orderInCategory="200"
          android:title="@string/clear_settings"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clear_cache"
          android:orderInCategory="300"
          android:title="@string/clear_cache"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clear_db"
          android:orderInCategory="400"
          android:title="@string/clear_db"
          android:visible="false"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:orderInCategory="500"
          android:title="@string/action_about"
          app:showAsAction="never"/>
</menu>
