<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.TMDbISELTheme">

    <LinearLayout
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Base.Theme.TMDbISELTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/movie_poster_label" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <TextView
                            android:id="@+id/detail_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/original_language_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <TextView
                            android:id="@+id/detail_original_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <TextView
                            android:id="@+id/detail_popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_average_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <TextView
                            android:id="@+id/detail_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detail_homepage_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/homepage_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <TextView
                            android:id="@+id/detail_homepage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:autoLink="web"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container_production_companies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/production_companies_label"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/info_title" />

                        <LinearLayout
                            android:id="@+id/detail_production_companies_container"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/sinopse_container"
            style="@style/CardView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:theme="@style/Base.Theme.TMDbISELTheme"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sinopse_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/sinopse_title"
                        android:textAppearance="?android:attr/linksClickable"
                        android:textColor="@color/info_title"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/sinopse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:padding="8dp"
                        android:theme="@style/Base.Theme.TMDbISELTheme"
                        android:visibility="gone" />
                </LinearLayout>
            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/reviews_container"
            style="@style/CardView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:theme="@style/Base.Theme.TMDbISELTheme"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reviews_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/reviews_label"
                        android:textAppearance="?android:attr/linksClickable"
                        android:textColor="@color/info_title"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/reviews_bag"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="4dp"
                        android:orientation="vertical"
                        android:visibility="gone" />
                </LinearLayout>
            </FrameLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>